tests/typeapp_termination/typeapp_termination.exp
Error ------------------------------------------------------------------------------------------------- soundness.js:8:5

Cannot cast `x` to `Bak` because mixed [1] is incompatible with empty [2] in type argument `T` [3]. [incompatible-type]

   soundness.js:8:5
   8|     x as Bak<empty>; // error mixed <~> empty
          ^

References:
   soundness.js:4:14
   4| type Bak<T = mixed> = Foo<Bar<T>>;
                   ^^^^^ [1]
   soundness.js:8:14
   8|     x as Bak<empty>; // error mixed <~> empty
                   ^^^^^ [2]
   soundness.js:1:10
   1| type Foo<T> = { foo: T };
               ^ [3]


Error ------------------------------------------------------------------------------------------------ soundness.js:13:5

Cannot cast `x` to union type because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2] in property `foo`.
 - Or boolean [1] is incompatible with string [3] in property `foo`.

   soundness.js:13:5
   13|     x as Bak<number> | Bak<string>; // error Bak<boolean> ~/~> Bak<number> | Bak<string>
           ^

References:
   soundness.js:12:24
   12|     declare var x: Bak<boolean>;
                              ^^^^^^^ [1]
   soundness.js:13:14
   13|     x as Bak<number> | Bak<string>; // error Bak<boolean> ~/~> Bak<number> | Bak<string>
                    ^^^^^^ [2]
   soundness.js:13:28
   13|     x as Bak<number> | Bak<string>; // error Bak<boolean> ~/~> Bak<number> | Bak<string>
                                  ^^^^^^ [3]



Found 2 errors
